# TasksCPP

./: .$cringe 1_3.drawio.bkp  .$cringe.drawio.bkp  .gitignore  .gitmodules  TasksCPP.sln  cringe 1_2.drawio  cringe 1_3.drawio  Болванка блок-схемы.drawio
CLang/Task1_1/: Task1_1.vcxproj.filters
CLang/Task1_2/: Task1_2.vcxproj.filters
CLang/Task1_3/: Task1_3.vcxproj  Task1_3.vcxproj.filters
CLang/Task2_1/: Task2_1.vcxproj  Task2_1.vcxproj.filters
CLang/Task2_2/: Task2_2.vcxproj  Task2_2.vcxproj.filters
CLang/Task2_3/: Task2_3.vcxproj  Task2_3.vcxproj.filters
CLang/Task3_1/: Task3_1.vcxproj  Task3_1.vcxproj.filters
CLang/Task3_2/: Task3_2.vcxproj
CLang/Task3_3/: Task3_3.vcxproj  Task3_3.vcxproj.filters
CLang/Task4_1/: Task4_1.c
CLang/Task4_2/: Task4_2.c
CLang/Task4_3/: Task4_3.vcxproj  array_functions.h
Cringe_schemas/: .$cringe 2_2.drawio.bkp  .$cringe 2_3.png.bkp  .$cringe_2_1.png.bkp  cringe 1_1.drawio  cringe 1_3.drawio  cringe 2_1.drawio  cringe 2_2.drawio  cringe 2_3.drawio  cringe 3_1.drawio  cringe 3_2.drawio  cringe 3_3.drawio  cringe 4_1.drawio  cringe 4_2.drawio  cringe 4_3.drawio  cringe_2_1.drawio  Книга1.xlsx
OOP_C++/Task_3/: CMakeLists.txt
OOP_C++/Task_3/src/: Piquet.cpp  Piquet.h  SpeedLimit.cpp  SpeedLimit.h  main.cpp  Сonstraint.cpp  Сonstraint.h
OOP_C++/Task_3/tests/: test_Piquet.cpp  test_SpeedLimit.cpp
OOP_C++/Task_4/: CMakeLists.txt
OOP_C++/Task_4/App/: main.cpp
OOP_C++/Task_4/Tests/: test_Stack.cpp
Reports/: ~$тчет 2.docx  Отчет 2.docx  Отчет 3.docx  Отчет 4.docx  Отчет шаблон.docx
Stack/: Stack.cpp  Stack.vcxproj  stack.cpp
Task1_1/: Task1_1.c  Task1_1.vcxproj  ~$чет 1_1.docx  Отчет 1 часть.docx  Отчет 1_1.docx
Task1_2/: Task1_2.c  Task1_2.vcxproj
Task1_3/: Task1_3.c
Task2_1/: Task2_1.c
Task2_2/: Task2_2.c
Task2_3/: Task2_3.c
Task3_1/: Task3_1.c  Task3_1.vcxproj
Task3_2/: Task3_2.c  Task3_2.vcxproj.filters
Task3_3/: Task3_3.c
Task4_1/: Task4_1.c  Task4_1.vcxproj  Task4_1.vcxproj.filters  array_functions.h
Task4_2/: Task4_2.c  Task4_2.vcxproj  Task4_2.vcxproj.filters  array_functions.h
Task4_3/: Task4_3.c  Task4_3.vcxproj  Task4_3.vcxproj.filters  array_functions.c  array_functions.h
Task_1/: CMakeLists.txt  CringeTask.vcxproj.filters  Task_1.vcxproj  main  main.cpp
Task_2/: CMakeLists.txt  Cylinder.cpp  Cylinder.h  Point.cpp  Point.h  Task_2.cpp  Task_2.vcxproj  main.cpp
Term_3/Task_2/tests/: CMakeLists.txt  tests.cpp
Term_3/Task_4_2_new/Tests/: CMakeLists.txt  GeneratorTests.cpp  MatrixTests.cpp
(+48 files in other folders)
